r4/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-nfs-pvc
              mountPath: /var/www/html
              subPath: wordpress
      volumes:
        - name: wordpress-nfs-pvc
          persistentVolumeClaim:
            claimName: wordpress-nfs-pvc
