r4/wordpress-service.yaml
  kind: Service
  apiVersion: v1
  metadata:
    name: wordpress-service
  spec:
    type: NodePort
    selector:
      app: wordpress
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30007
